edit cursor class on portfolio

--- a/assets/css/cubes.css
+++ b/assets/css/cubes.css
@@ -10,6 +10,10 @@
     width: 100vh - 150px; 
 }
 
+.cube {
+    cursor: default; 
+}
+
 #cube-0 {
     background-color: #000000;
     flex: initial; 
