--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -17,6 +17,10 @@ p {
     margin-bottom: 0px !important; 
 }
 
+.bold {
+    font-weight: bold !important; 
+}
+
 #intro-page {
     background-color: rgb(238, 238, 238); 
 }
@@ -72,6 +76,20 @@ p {
     max-width: 70%;
     height: 100vh;  
     max-height: 100%; 
+    background-color: rgb(238, 238, 238); 
+    padding-left: 15px; 
+    padding-right: 15px; 
+    overflow-y: auto; 
+    overflow-x: hidden; 
+    margin-left: 30%;
+    justify-content: center;  
+    position: relative; 
+}
+
+#right-work {
+    width: 70%; 
+    max-width: 70%;
+    height: auto; 
     background-color: rgb(238, 238, 238); 
     padding-left: 15px; 
     padding-right: 15px; 
@@ -208,8 +226,13 @@ p {
     justify-content: space-evenly
 }
 
-#stack-label-row, #work-label-row {
+#stack-label-row {
     margin-bottom: 5%; 
+}
+
+#work-label-row {
+    margin-top: 3%; 
+    margin-bottom: 3%; 
 }
 
 #work-header-row {
