--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -483,6 +483,15 @@ p {
         overflow: scroll;
         text-align: center; 
     }
+    #right-work{
+        flex-direction: row;
+        width: 100%; 
+        height: 70vh;
+        max-width: 100%;
+        margin-left: 0px; 
+        overflow: scroll;
+        text-align: center; 
+    }
 
     #stack-label-row {
         margin-top: 8%; 
