add scroll p in home page and box shadow for project cards

--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -267,6 +267,7 @@ p {
 
 .card {
     margin-top: 5%; 
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.16), 0 6px 20px 0 rgba(0, 0, 0, 0.13);
 }
 
 @media (max-width: 1266px){
