add favicon for portfolio

--- a/assets/css/page-structure.css
+++ b/assets/css/page-structure.css
@@ -22,7 +22,7 @@ p {
 }
 
 #intro-page {
-    background-color: rgb(238, 238, 238); 
+    background-color: #eeeeee; 
 }
 
 #intro-page.rotated {
@@ -268,6 +268,10 @@ p {
 .card {
     margin-top: 5%; 
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.16), 0 6px 20px 0 rgba(0, 0, 0, 0.13);
+}
+
+.card-img-top {
+    border-bottom: solid #eeeeee 3px;
 }
 
 @media (max-width: 1266px){
